[FIX] portal: use flex for #wrapwrap layout
(Needed for themes migration)

The #wrapwrap element always featured a hack to make the inner <footer/>
stick to the bottom of small-height pages (typically, empty pages). As
advertised, this was a *hack*: forcing the element to "table" display
and its children to "table-row" display. This prevented some themes
to do some stuff.

With the migration to BS4, we now use flex at various places and so
only support the browsers which support flex (every last version of
major ones). The footer feature can be solved using flex, so there is
no point in keeping the hack.

This also allows to make the #wrapwrap element scroll instead of the
<body/> and to always have a screen-shaped #wrapwrap element, making the
element the user's <body/> it was always meant to be.

--- a/addons/portal/static/src/scss/portal.scss
+++ b/addons/portal/static/src/scss/portal.scss
@@ -14,16 +14,17 @@ $-navbar-height: $nav-link-height !default;
 // Frontend general
 #wrapwrap {
     position: relative;
-    display: table;
-    table-layout: fixed;
+    display: flex;
+    flex-flow: column nowrap;
     width: 100%;
     height: 100%;
+    overflow: auto;
 
     > * {
-        display: table-row;
+        flex: 0 0 auto;
     }
     > main {
-        height: 100%;
+        flex: 1 0 auto;
     }
 }
 
